# a_little_poem

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  run_minify.py  run_release.py  run_tailwind.py
asset/embed/css/: main.css  main.min.css
asset/embed/js/: bucket_list.js  bucket_list.min.js
asset/locale/fr-FR/: validate.ftl
src/: main.rs
src/bucket_list/: mod.rs  model.rs  repository.rs  route.rs  rules.rs
src/bucket_list/_asset/: bucket_list.js  bucket_list.min.js  common.mjs  token.mjs  vue.mjs
src/bucket_list/validate/: description.rs  name.rs
src/common/: adapter.rs  cookie_builder.rs  etag.rs  icon.rs  mod.rs
src/common/_asset/: common.min.js
src/common/cache_local/: mod.rs
src/common/config/: mod.rs  poem.rs
src/common/context/: mod.rs  user.rs
src/common/csrf/: mod.rs
src/common/csrf/_asset/: token.min.js
src/common/db/: mod.rs
src/common/embed/: mod.rs
src/common/error/: mod.rs
src/common/flash/: mod.rs
src/common/html/: context_html.rs  css.rs  mod.rs  validate.rs
src/common/html/_asset/: importmap.dev.json  importmap.dev.min.json  importmap.prod.json  importmap.prod.min.json  main.css  main.min.css
src/common/html/_asset/tailwind/: main.css  (+1 more)
src/common/locale/: mod.rs
src/common/locale/_locale/: english.ftl  french.ftl
src/common/validation/: mod.rs  string_rules.rs  validate_locale.rs
src/home/: mod.rs
src/home/_asset/: root.js  root.min.js
src/user/: flag.rs  form.rs  locale.rs  mod.rs  model.rs  repository.rs  route.rs  rules.rs  service.rs
src/user/validate/: password.rs  username.rs
