[package]
name = "a_little_poem"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.16"
error-stack = "0.5.0"
poem = { version = "3.1.12", features = ["cookie", "session", "csrf", "i18n"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
figment = { version = "0.10.19", features = ["toml"] }
tokio = { version = "1.47.1", features = ["full"] }
maud = { version = "0.27.0", features = ["poem"] }
rusqlite = { version = "0.37.0", features = ["chrono"] }
argon2 = "0.5.3"
rmp-serde = "1.3.0"
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }